# Powertrack

./: .gitignore  LICENCE  README.md  meson.build
data/: de.somefoo.powertrack.appdata.xml  de.somefoo.powertrack.desktop  meson.build
powertrack/: __main__.py  graph.py  meson.build  powertrack.glade  powertrack.gresource.xml  powertrack.in
