install_data('de.somefoo.powertrack.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(['de.somefoo.powertrack.appdata.xml'],
             install_dir : get_option('datadir') / 'metainfo')

install_data('de.somefoo.powertrack.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)
